--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    def okhttp = "4.9.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp"
+
 
 
 }
