--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 24 14:51:04 MDT 2020
-sdk.dir=C\:\\Users\\Envy\\AppData\\Local\\Android\\Sdk
+#Sat Oct 24 17:18:20 MDT 2020
+sdk.dir=C\:\\Users\\Wrath\\AppData\\Local\\Android\\Sdk
