--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,13 @@ dependencies {
     def okhttp = "4.9.0"
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
 
+    // Mockk
+    def mockKVersion = '1.10.2'
+    testImplementation "io.mockk:mockk-agent-jvm:$mockKVersion"
+    testImplementation "io.mockk:mockk:$mockKVersion"
+
+    def kotlin_coroutines_version = "1.3.0-M1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutines_version"
 
 
 }
